Refactored data and added filtering.
