# api/datum.pb.gw.go
@@ -124,6 +124,41 @@ func request_DatumService_ListForDevice_0(ctx context.Context, marshaler runtime
 
 }
 
+var (
+	filter_DatumService_ListForDeviceBySerialNumber_0 = &utilities.DoubleArray{Encoding: map[string]int{"serial_number": 0}, Base: []int{1, 1, 0}, Check: []int{0, 1, 2}}
+)
+
+func request_DatumService_ListForDeviceBySerialNumber_0(ctx context.Context, marshaler runtime.Marshaler, client DatumServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq ListDataForDeviceBySerialNumberRequest
+	var metadata runtime.ServerMetadata
+
+	var (
+		val string
+		ok  bool
+		err error
+		_   = err
+	)
+
+	val, ok = pathParams["serial_number"]
+	if !ok {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "serial_number")
+	}
+
+	protoReq.SerialNumber, err = runtime.String(val)
+
+	if err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "serial_number", err)
+	}
+
+	if err := runtime.PopulateQueryParameters(&protoReq, req.URL.Query(), filter_DatumService_ListForDeviceBySerialNumber_0); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := client.ListForDeviceBySerialNumber(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
 func request_DatumService_Delete_0(ctx context.Context, marshaler runtime.Marshaler, client DatumServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var protoReq DatumRequest
 	var metadata runtime.ServerMetadata
@@ -269,6 +304,26 @@ func RegisterDatumServiceHandlerClient(ctx context.Context, mux *runtime.ServeMu
 
 	})
 
+	mux.Handle("GET", pattern_DatumService_ListForDeviceBySerialNumber_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateContext(ctx, mux, req)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_DatumService_ListForDeviceBySerialNumber_0(rctx, inboundMarshaler, client, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_DatumService_ListForDeviceBySerialNumber_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	mux.Handle("DELETE", pattern_DatumService_Delete_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -301,6 +356,8 @@ var (
 
 	pattern_DatumService_ListForDevice_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2, 2, 3}, []string{"api", "devices", "device_id", "data"}, ""))
 
+	pattern_DatumService_ListForDeviceBySerialNumber_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2, 2, 3}, []string{"api", "devices", "serial_number", "data-by-serial"}, ""))
+
 	pattern_DatumService_Delete_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2}, []string{"api", "data", "id"}, ""))
 )
 
@@ -312,6 +369,8 @@ var (
 	forward_DatumService_List_0 = runtime.ForwardResponseMessage
 
 	forward_DatumService_ListForDevice_0 = runtime.ForwardResponseMessage
+
+	forward_DatumService_ListForDeviceBySerialNumber_0 = runtime.ForwardResponseMessage
 
 	forward_DatumService_Delete_0 = runtime.ForwardResponseMessage
 )
